tests/samples/valid/mutable_array.pn
fn main() -> i32
{
	var x: [2]i32 = [0, 50];
	x[0] = x[1];
	x[1] = 150;
	var y = x[0] + x[1];
	return: y
}
