tests/samples/invalid/too_few_arguments.pn

fn foo(x: i32, y: i32) -> i32
{
	return:
	x + y
}

fn main() -> i32
{
	return:
	foo(50)
}
